finished grid layout and started content layout

--- a/index.html
+++ b/index.html
@@ -13,54 +13,51 @@
     
     </head>
     <body>
-    <!-- <div id="background"> -->
-                
-        <div class="container">
+    <!-- <div id="background"> -->                
+        <div class="container-fluid">
             <!-- Header -->
             <div class="row header">
                 <!-- name -->
-              <div class="col">
+              <div class="col-12 col-sm-6 col-md-4 col-lg-4">
                 <h1 id="myName">Andrés Peña</h1>
               </div>
                 <!-- buttons -->
-              <div class="col headerBtns">
-                <ul>
-                    <li><a>About Me</a></li>
-                    <li><a>Work</a></li>
-                    <li><a>Contact Me</a></li>
-                </ul>
+              <div class="col-12 col-sm-6 col-md-8 col-lg-8">
+                    <ul class="headerBtns">
+                      <li><a>About Me</a></li>
+                      <li><a>Work</a></li>
+                      <li><a>Contact Me</a></li>
+                    </ul>                
               </div>              
             </div>
             <!-- Ribbon -->
-            <div class="row ribbon">
-                <div class="col">
+            <div class="row">
+              <!-- subtitle -->
+                <div class="col ribbon">
                   <!-- Photo of me -->
-                <img class="me" src="./Assets/me.jpg" alt="Photograph of Andrés Peña">
-                </div>
-                  <!-- subtitle -->
-                <div class="col">
+                  <img class="me" src="./Assets/me.jpg" alt="Photograph of Andrés Peña">
                   <h3 id="subtitle">Hi, I am a web developer keen to help your city move</h3>
                 </div>              
               </div>
             <!-- About Me -->
             <div class="row about">
                 <!-- section title -->
-                <div class="col section-title">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
                   <h2>About Me</h2>
                 </div>
                 <!-- content -->
-                <div class="col">
-                  <p>Paragraph with information about me</p>
+                <div class="col-12 col-sm-6 col-md-8 col-lg-8">
+                  <p>I have 8 years of local and international experience in transportation planning and engineering, including research and policy formulation. Professional internationally trained and registered as EIT with Professional Engineers Ontario, I have taken formal training in ArcMap, Vissim, AutoCAD, Revit and Photoshop. In previous positions, I have performed with MS Office, ArcMap, Vissim, Synchro, and Stata. I am currently in a professional transition.</p>
                 </div>              
               </div>
             <!-- Work -->
             <div class="row work">
                 <!-- section title -->
-                <div class="col section-title">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
                     <h2>Work</h2>
                 </div>
                 <!-- gallery of apps -->
-                <div class="col">
+                <div class="col-12 col-sm-6 col-md-8 col-lg-8">
                   <div class="container">
                       <!-- big app -->
                       <div class="row"> <div class="big"></div> </div>
@@ -74,12 +71,12 @@
             <!-- Contact Me -->
             <div class="row contact">
                 <!-- section title -->
-                <div class="col">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
                     <h2>Contact Me</h2>
                 </div>
                 <!-- contact methods -->
-                <div class="col contact-methods">
-                    <ul>
+                <div class="col-12 col-sm-6 col-md-8 col-lg-8">
+                    <ul class="contact-methods">
                         <li><a>613.981.7712</a></li>
                         <li><a>Email Me</a></li>
                         <li><a>LinkedIn</a></li>
