--- a/index.html
+++ b/index.html
@@ -60,9 +60,35 @@
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
                   <div class="container">
                       <!-- big app -->
-                      <div class="row"> <div class="big"></div> </div>
+                    <div class="row"> 
+                      <div class="card" style="width: 100%;">
+                        <img src="./Assets/images/MoviePal.PNG" class="card-img-top big" alt="screenshot of the deployed application's homepage">
+                        <div class="card-body">
+                          <h5 class="card-title">Movie Pal</h5>
+                          <a href="https://altugcakmakci.github.io/movie_pal/" class="card-link">Deployed App</a>
+                          <a href="https://github.com/altugcakmakci/movie_pal.git" class="card-link">GitHub Repo</a>                          
+                        </div>                       
+                      </div>
+                    </div>
                       <!-- medium apps -->
-                      <div class="row"> <div class="medium"></div> </div>
+                      <div class="row">  
+                      <div class="card" style="width: 50%;">
+                        <img src="./Assets/images/DayPlanner.PNG" class="card-img-top medium" alt="screenshot of the deployed application's homepage">
+                        <div class="card-body">
+                          <h5 class="card-title">Day Planner</h5>
+                          <a href="https://aj-pena.github.io/Day-Planner/" class="card-link">Deployed App</a>
+                          <a href="https://github.com/aj-pena/Day-Planner.git" class="card-link">GitHub Repo</a>                          
+                        </div>                       
+                      </div>
+                      <div class="card" style="width: 50%;">
+                        <img src="./Assets/images/CodeQuiz.png" class="card-img-top medium" alt="screenshot of the deployed application's homepage">
+                        <div class="card-body">
+                          <h5 class="card-title">Code Quiz</h5>
+                          <a href="https://aj-pena.github.io/Code-Quiz/" class="card-link">Deployed App</a>
+                          <a href="https://github.com/aj-pena/Code-Quiz.git" class="card-link">GitHub Repo</a>                          
+                        </div>                       
+                      </div>
+                    </div>
                       <!-- medium apps -->
                       <div class="row"> <div class="medium"></div> </div>
                   </div>
