added hyperlinks and media query

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <!-- buttons -->
               <div class="col-12 col-sm-6 col-md-8 col-lg-8">
                     <ul class="headerBtns">
-                      <li><a>About Me</a></li>
-                      <li><a>Work</a></li>
-                      <li><a>Contact Me</a></li>
+                      <li><a href="#about-me-section">About Me</a></li>
+                      <li><a href="#work-section">Work</a></li>
+                      <li><a href="#contact-me-section">Contact Me</a></li>
                     </ul>                
               </div>              
             </div>
@@ -43,7 +43,7 @@
             <div class="row about">
                 <!-- section title -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
-                  <h2>About Me</h2>
+                  <h2><a id="about-me-section">About Me</a></h2>
                 </div>
                 <!-- content -->
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
@@ -54,7 +54,7 @@
             <div class="row work">
                 <!-- section title -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
-                    <h2>Work</h2>
+                    <h2><a id="work-section">Work</a></h2>
                 </div>
                 <!-- gallery of apps -->
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
@@ -72,7 +72,7 @@
                     </div>
                       <!-- medium apps -->
                       <div class="row">  
-                      <div class="card" style="width: 50%;">
+                      <div class="card card-medium" style="width: 50%;">
                         <img src="./Assets/images/DayPlanner.PNG" class="card-img-top medium" alt="screenshot of the deployed application's homepage">
                         <div class="card-body">
                           <h5 class="card-title">Day Planner</h5>
@@ -80,7 +80,7 @@
                           <a href="https://github.com/aj-pena/Day-Planner.git" class="card-link">GitHub Repo</a>                          
                         </div>                       
                       </div>
-                      <div class="card" style="width: 50%;">
+                      <div class="card card-medium" style="width: 50%;">
                         <img src="./Assets/images/CodeQuiz.png" class="card-img-top medium" alt="screenshot of the deployed application's homepage">
                         <div class="card-body">
                           <h5 class="card-title">Code Quiz</h5>
@@ -98,15 +98,15 @@
             <div class="row contact">
                 <!-- section title -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 section-title">
-                    <h2>Contact Me</h2>
+                    <h2><a id="contact-me-section">Contact Me</a></h2>
                 </div>
                 <!-- contact methods -->
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
                     <ul class="contact-methods">
                         <li><a>613.981.7712</a></li>
                         <li><a>Email Me</a></li>
-                        <li><a>LinkedIn</a></li>
-                        <li><a>GitHub</a></li>
+                        <li><a href="http://www.linkedin.com/in/andrespenacabra">LinkedIn</a></li>
+                        <li><a href="https://github.com/aj-pena">GitHub</a></li>
                     </ul>
                 </div>              
               </div>
