--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="row header">
                 <!-- name -->
               <div class="col-12 col-sm-6 col-md-4 col-lg-4">
-                <h1 id="myName">Andrés Peña</h1>
+                <h1 id="myName"><a href="./Assets/pdf/Andrés_Peña.pdf">Andrés Peña</a></h1>
               </div>
                 <!-- buttons -->
               <div class="col-12 col-sm-6 col-md-8 col-lg-8">
@@ -103,8 +103,8 @@
                 <!-- contact methods -->
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
                     <ul class="contact-methods">
-                        <li><a>613.981.7712</a></li>
-                        <li><a>Email Me</a></li>
+                        <li><a href="tel:+16139817712">613.981.7712</a></li>
+                        <li><a href="mailto:andrespena.ap@outlook.com">Email Me</a></li>
                         <li><a href="http://www.linkedin.com/in/andrespenacabra">LinkedIn</a></li>
                         <li><a href="https://github.com/aj-pena">GitHub</a></li>
                     </ul>
