tweaked layout paddings

--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
                 </div>
                 <!-- content -->
                 <div class="col-12 col-sm-6 col-md-8 col-lg-8">
-                  <p>I have 8 years of local and international experience in transportation planning and engineering, including research and policy formulation. Professional internationally trained and registered as EIT with Professional Engineers Ontario, I have taken formal training in ArcMap, Vissim, AutoCAD, Revit and Photoshop. In previous positions, I have performed with MS Office, ArcMap, Vissim, Synchro, and Stata. I am currently in a professional transition.</p>
-                </div>              
+                  <p id="about-me">I have 8 years of experience in transportation planning and engineering. Registered as EIT with Professional Engineers Ontario, I have taken formal training in ArcMap, Vissim, AutoCAD, Revit and Photoshop. Passionate about urban and regional transportation, I am currently learning to code web applications that will help cities and companies more safely, efficiently and fairly.   
               </div>
             <!-- Work -->
             <div class="row work">
